fixed sec navbar z-index and position

--- a/style.css
+++ b/style.css
@@ -1391,10 +1391,10 @@ hr.subtle {
 /* secondary nav css */
 
 .nav-secondary {
-    position: absolute;
+    position: fixed;
     width: 100%;
     background-color: rgba(245, 245, 245, .9);
-    z-index: 4;
+    z-index: 2;
 }
 
 .nav-secondary a {
